--- a/Aula 03 - repetições e array/Material/index.html
+++ b/Aula 03 - repetições e array/Material/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade</title>
+    <title>Repetições e Array</title>
 </head>
 <body style="background-color: rgba(128, 128, 128, 0.322);">
     
-    <script src="js/script.js"></script>
+    <script src="js/scriptArray.js"></script>
 </body>
 </html>
