--- a/Aula 04 - DOM (Atividade Salário Familia)/index.html
+++ b/Aula 04 - DOM (Atividade Salário Familia)/index.html
@@ -41,7 +41,7 @@
                     <button id="btnCalcular" type="button">Calcular</button>
                 </div>
                 <div class="formGroup">
-                    <span id="resultado">RESULTADO DO CÁLCULO</span>
+                    <span id="resultado"></span>
                 </div>
             </form>
         </main>
