--- a/Aula 05 - Objetojs/Atividades/Atividade Revisão/index.html
+++ b/Aula 05 - Objetojs/Atividades/Atividade Revisão/index.html
@@ -31,10 +31,11 @@
                 <input type="text" id="categoria" placeholder="Categoria do filme">
             </div>
 
-            <button type="button" id="btnFilmes">ADICIONAR FILME</button>
+            <div id="btn"><button type="reset" id="btnFilmes">ADICIONAR FILME</button></div>
         </form>
         
         <h1>Filmes Adicionados</h1>
+        
         <div id="resposta"></div>
     </div>
 
